testfx/errors/error_tests/edge_30_foreach_variants.fx
// 其他语言的foreach语法
arr := [1, 2, 3, 4, 5]

// JavaScript风格
for (item of arr) {
    println(item)
}

// Python风格
for item in arr:
    println(item)

// Java增强for
for (int item : arr) {
    println(item)
}
